# examples

./: meson.build
po/: de.po  es.po  meson.build  myapp.pot
src/: Application.vala  Config.vala.in
